--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,6 +10,7 @@
     justify-content: center;
     text-align: center;
     color: $color-grey-light-1;
+    margin-bottom: 3rem;
 
     background: linear-gradient(90deg, $color-gradient-end, $color-gradient-start);
     animation: animateBackground  20s linear infinite;
