--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -14,12 +14,15 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-row-gap: 3rem;
-    padding-bottom: 2rem;
+
         &__img {
-        width: 100%;
+        width:100%;
         grid-row: 1 / 3;
         grid-column: 1 / -1;
         z-index: 1;
+
+
+
         }
 
     &__name {
@@ -41,7 +44,7 @@
 
     &__tech {
         font-size: 1.5rem;
-        margin-left: 2rem;
+        margin-left: 1rem;
         display: flex;
         align-items: center;
 
@@ -65,10 +68,3 @@
 
 
 
-// .slideImg {
-//     max-height: 100%;
-//     max-width: 100%;
-//     width: auto;
-//     height: auto;
-//     margin: auto;
-// }
